force-app/main/default/objects/Panel_Question__c/Panel_Question__c.object-meta.xml
<CustomObject>
    <label>Panel Question</label>
    <nameField>
        <displayFormat>Q{0000}.</displayFormat>
        <label>Panel Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>