force-app/main/default/objects/Panel_Question__c/fields/Mock_Panel__c.field-meta.xml
<CustomField>
    <fullName>Mock_Panel__c</fullName>
    <label>Mock Panel</label>
    <referenceTo>Mock_Panel__c</referenceTo>
    <relationshipLabel>Panel Questions</relationshipLabel>
    <relationshipName>Panel_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>